<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fu.agile.iremember.MainActivity$PlaceholderFragment" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IRemember"
            android:layout_gravity="center"
            />
        <Button 
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btAdd"
            />
        <EditText 
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etFilter"
            android:hint="@string/etFilter"
            />

    </LinearLayout>
	<ListView 
	    android:id="@+id/lwListRemember"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    ></ListView>
</LinearLayout>
